# bible.com-scraper

./: README.md  bible_com_scraper.py  mypy.ini  pyproject.toml
